# OT-Tracking

./: .env.example  README.md  index.html  metadata.json  package-lock.json  package.json  reproduce_error.py  server.ts.md  vercel.json  vite.config.ts
backend/: README.md  auth.py  database.py  generate_secret.py  main.py  migrate_leave.py  models.py  pyproject.toml  requirements.txt  test_db.py  test_pisit_login.py
backend/routers/: attendance.py  audit.py  auth.py  offsets.py  settings.py
src/: App.tsx  index.css  types.ts
src/components/: AuditLog.tsx  LoadingScreen.tsx  LoginPage.tsx  calendar.tsx  ot.tsx  report.tsx  setting.tsx  table.tsx
